Fix form being cut off in landscape mode on mobile devices.

--- a/site-style.css
+++ b/site-style.css
@@ -395,6 +395,7 @@ button:focus {
     }
     .section3 {
         min-height:150%;
+        overflow:hidden;
     }
     /*.backgroundimage-1, .backgroundimage-2, .backgroundimage-3 {
         background-attachment:fixed;
